update LDAP operation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ server.port=8081
 logging.level.root=INFO
 logging.level.com.sogo.ad.midd=INFO
 logging.level.org.springframework=INFO
+logging.level.org.springframework.ldap=DEBUG
 
 # 日誌格式
 logging.charset.console=UTF-8
@@ -25,8 +26,8 @@ ldap.url=ldap://4.145.88.25:389
 ldap.base-dn=DC=sogotest,DC=local
 ldap.username=jeffchangadmtest@sogotest.local
 ldap.password=123qweaS
-ldap.user-search-base=ou=users
-ldap.group-search-base=ou=groups
+ldap.user-search-base=
+ldap.group-search-base=
 ldap.is.production.site=false
 
 # SMTP Server
