put ldap to ldaps protocal, and add user/ou successfully

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8081
 
 # 日誌設定
 logging.level.root=INFO
-logging.level.com.sogo.ad.midd=INFO
-logging.level.org.springframework=INFO
+logging.level.com.sogo.ad.midd=DEBUG
+logging.level.org.springframework=DEBUG
 logging.level.org.springframework.ldap=DEBUG
 
 # 日誌格式
@@ -22,13 +22,13 @@ logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=5
 
 # LDAP Server
-ldap.url=ldap://4.145.88.25:389
+#ldap.url=ldap://4.145.88.25:389
+ldap.url=ldaps://4.145.88.25:636
 ldap.base-dn=DC=sogotest,DC=local
 ldap.username=jeffchangadmtest@sogotest.local
 ldap.password=123qweaS
 ldap.user-search-base=
 ldap.group-search-base=
-ldap.is.production.site=false
 
 # SMTP Server
 mail.smtp.host=
