--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,8 +52,8 @@ logging.logback.rollingpolicy.max-history=5
 ldap.url=ldap://48.218.20.1:389
 #ldap.url=ldap://localhost:389
 ldap.base-dn=DC=uat-sogo,DC=net
-ldap.username=sogoadm@uat-sogo.net
-ldap.password=S@g@20250123
+ldap.username=jeffchang@uat-sogo.net
+ldap.password=123qweaS
 ldap.user-search-base=
 ldap.group-search-base=
 
