將 spring.jpa.hibernate.ddl-auto 設定從 update 更改為 none，以避免自動更新資料庫結構

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # 在控制台顯示 SQL 語句 (開發時有用，正式環境建議關閉)
 spring.jpa.show-sql=false  
  # 自動根據 Entity 更新資料庫結構 (開發時有用，正式環境建議改為 none 或 validate)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # 日誌設定
