新增組織資訊同步 API，更新 RadarDataController，並在 ADLDAPSyncServiceImpl 中優化組織創建邏輯；同時在 pom.xml 中新增 Hibernate Validator 依賴，並更新 application.properties 的資料庫連線設定。

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -119,6 +124,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<mainClass>com.sogo.ad.midd.AdMiddApplication</mainClass> <!-- Main Class路徑 -->
 				</configuration>
 			</plugin>
 			<plugin>
