--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # PostgreSQL 資料庫連線設定
-#spring.datasource.url=jdbc:postgresql://localhost:5433/ad_midd
-spring.datasource.url=jdbc:postgresql://localhost:5432/ad_midd
+spring.datasource.url=jdbc:postgresql://localhost:5433/ad_midd
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ad_midd
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -50,8 +50,8 @@ logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=5
 
 # LDAP Server
-#ldap.url=ldap://48.218.20.1:389
-ldap.url=ldap://localhost:389
+ldap.url=ldap://48.218.20.1:389
+#ldap.url=ldap://localhost:389
 ldap.base-dn=DC=uat-sogo,DC=net
 ldap.username=jeffchang@uat-sogo.net
 ldap.password=123qweaS
