--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,16 +12,16 @@ spring.thymeleaf.suffix=.html
 
 # PostgreSQL 資料庫連線設定
 #spring.datasource.url=jdbc:postgresql://localhost:5433/ad_midd
-spring.datasource.url=jdbc:postgresql://localhost:5432/ad_midd
+spring.datasource.url=jdbc:postgresql://localhost:5433/ad_midd
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA 設定
 # 在控制台顯示 SQL 語句 (開發時有用，正式環境建議關閉)
-spring.jpa.show-sql=false  
+spring.jpa.show-sql=false
  # 自動根據 Entity 更新資料庫結構 (開發時有用，正式環境建議改為 none 或 validate)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # 日誌設定
@@ -47,7 +47,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} -
 # 日誌檔案設定
 logging.file.name=./logs/ad-midd.log
 logging.logback.rollingpolicy.max-file-size=10MB
-logging.logback.rollingpolicy.max-history=5
+logging.logback.rollingpolicy.max-history=30
 
 # LDAP Server
 #ldap.url=ldap://48.218.20.1:389
