重構 RadarDataController，調整代碼格式以提升可讀性，並在 AzureADService 中新增同步員工資料至 Radar 的功能，更新 AzureADServiceImpl 以實現該功能，並在 application.properties 中新增相關配置。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=false
  # 自動根據 Entity 更新資料庫結構 (開發時有用，正式環境建議改為 none 或 validate)
 spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.default_schema=ad_midd
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # 日誌設定
